# auto-unassign

./: README.md  action.yml  licenserc.toml  pyproject.toml
.github/: semantic.yml
.github/workflows/: ci.yml  cron.yml
src/auto_unassign/: __init__.py
