[project]
name = "auto-unassign"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tison", email = "wander4096@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
